@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * By default the WebUI now displays only calculations more recent than
+    30 days;
   * Filtered the sources up front when there are few sites (<= 10)
   * Reduced the number of tasks generated when filter_sources is False
   * Saved engine_version and hazardlib_version as attributes of the datastore
